# locki

./: .gitignore  README.md  mise.toml  pyproject.toml
docs/: tech-stack-validation.md
src/locki/: __init__.py  __main__.py  ai.py  async_typer.py  cmd_proxy.py  config.py  console.py  locki.yaml  logging.py  mcp_server.py  paths.py  port_forward.py  runes.py  safe_cmd.py  self_service.py  shell.py  utils.py  vm.py  worktree.py
src/locki/cmd/: ai.py  cleanup.py  daemon.py  exec.py  include.py  internal.py  list.py  port_forward.py  remove.py  self_service.py  vm.py
src/locki/data/: AGENTS.md  CLAUDE.md  CODEX.md  claude.json  cmd-proxy-stub.py  container-setup.sh  hook-wrapper.sh  locki-hook.sh  locki-idle-daemon  locki-idle-daemon.py  locki-idle-daemon.service  locki-ssh-config  locki.yaml  proxy-stub.sh  sandbox-stub.sh  sandbox.md  settings.json  stub.sh  vm-setup.sh
test/: e2e.sh  test_safe_cmd.py
tests/: test_providers.py
