[project]
name = "locki"
version = "0.0.8"
description = "AI sandboxing without the taste of sand"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "click>=8.1",
    "InquirerPy>=0.3",
    "pydantic>=2.12.5",
    "tomlkit>=0.13",
]

[dependency-groups]
dev = [
    "pyrefly>=0.60.1",
    "ruff>=0.15.7",
    "wheel>=0.46.3",
]

[project.scripts]
locki = "locki:app"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py314"
lint.select = [
    "E", "W", "F", "UP", "I", "B", "N", "C4", "Q", "SIM", "RUF", "TID", "ASYNC",
]
lint.ignore = ["E501"]
force-exclude = true

[tool.pyrefly]
project_includes = ["src"]
python_version = "3.14"

[tool.uv]
exclude-newer = "P7D"
exclude-newer-package = {}
